k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: platform-app
  template:
    metadata:
      labels:
        app: platform-app
      annotations:
        # Tells Prometheus to scrape this pod automatically
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: app
          image: platform-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          # Kubernetes checks this to know if the pod is still alive
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          # Kubernetes checks this before sending traffic to the pod
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
