k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-app
  namespace: default
spec:
  selector:
    app: platform-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
